Bug 432692 - "Refresh" action on Updates page is now icons-only
Summary: "Refresh" action on Updates page is now icons-only
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.20.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-09 15:59 UTC by Nate Graham
Modified: 2021-02-10 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Now icons-only (12.46 KB, image/jpeg)
2021-02-09 15:59 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-02-09 15:59:07 UTC
Created attachment 135533 [details]
Now icons-only

See attached screenshot. git bisect confirms that the no-more-QAction port (4bf3f59adb82e2ef38df98073ee39e6d20e56921) regressed this.
Comment 1 Bug Janitor Service 2021-02-10 01:05:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/75
Comment 2 Aleix Pol 2021-02-10 12:47:03 UTC
Git commit 2f7b1f58c3bd0a0031f06ce0e1f062055649c7b2 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 10/02/2021 at 12:46.
Pushed by apol into branch 'master'.

DiscoverAction: Fix wrong boilerplate code

M  +2    -2    libdiscover/resources/DiscoverAction.cpp
M  +1    -1    libdiscover/resources/DiscoverAction.h

https://invent.kde.org/plasma/discover/commit/2f7b1f58c3bd0a0031f06ce0e1f062055649c7b2