DiscoverAction: Fix wrong boilerplate code

BUG: 432692